# EmbreadedWM

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
include/: AppPage.h  ExecutableButton.h  desktop_window.h  events.h  window_manager.h
include/glade/: #Home.glade#  Home.glade  Home.glade~
src/: AppPage.cpp  ExecutableButton.cpp  desktop_window.cpp  main.cpp  window_manager.cpp
